# pyrpa

./: .gitignore  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES  flibs.py  fmod.f90  hop.input  hop2.input  hop3.input  main.py  plibs.py  plot.py  pytest.ini  qsub.sh
Doc/: manual_EN.typ  manual_JP.typ
inputs/: square.hop  square_soc.hop
libs/: CMakeLists.txt  Makefile  __init__.py  _hamiltonian.py  _selfenergy.py  _susceptibility.py  _transport.py  fUJ.f90  fchi.f90  fcond.f90  feliash.f90  fimp.f90  flibs.py  fmod.f90  fpade.f90  fphi.f90  fself.f90  makefile  plibs.py
libs/flibs/: __init__.py  _eilenberger.py  _eliashberg.py  _green.py  _hamiltonian.py  _impurity.py  _interaction.py  _loader.py  _selfenergy.py  _susceptibility.py  _transport.py
libs/plibs/: __init__.py  _bands.py  _calc.py  _eilenberger.py  _eilenberger_fs.py  _eilenberger_lattice.py  _eilenberger_spin.py  _eilenberger_surface.py  _eilenberger_vortex.py  _lattice.py  _response.py  _symmetry.py  _wannier_io.py
libs/src/: CMakeLists.txt  fUJ.f90  fchi.f90  fchi0withsoc.f90  fchisc.f90  fcond.f90  feilenberger.f90  feliash.f90  feliashwithsoc.f90  ffeliash.f90  fft_wrapper.cpp  fimp.f90  finv.f90  fmod.f90  fpade.f90  fphi.f90  fself.f90  fselfwithsoc.f90  fwithsoc.f90
tests/: README.md  _tools.py  conftest.py  run_all.py  test_eilenberger.py  test_rpa_flex.py  test_tools.py  test_transport.py
