CMAKE_MINIMUM_REQUIRED (VERSION 3.5)
project (pyrpa)
enable_language (Fortran)
add_subdirectory(src)
add_library(fmod SHARED $<TARGET_OBJECTS:src>)

if(${CMAKE_Fortran_COMPILER_ID} STREQUAL "Intel")
  set(CMAKE_Fortran_FLAGS "-O2 -mavx2 -qopenmp -IPO -fPIC -heap-arrays")
  target_link_libraries (fmod mkl_sequential mkl_core iomp5)
elseif(${CMAKE_Fortran_COMPILER_ID} STREQUAL "flang")
  set(CMAKE_Fortran_FLAGS "-O2 -march=znver3 -fopenmp -finline-functions -fPIC")
  target_link_libraries (fmod blis flame fftw3 m pthread)
elseif(${CMAKE_Fortran_COMPILER_ID} STREQUAL "GNU")
  set(CMAKE_Fortran_FLAGS "-O2 -mavx2 -fopenmp -finline-functions -fimplicit-none -finit-integer=NaN -finit-real=NaN -fPIC")
  target_link_libraries (fmod mkl_sequential mkl_core iomp5)
endif(${CMAKE_Fortran_COMPILER_ID} STREQUAL "ifx")
